--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,19 @@
-@import './base.css';
+@import url(./normalize.css);
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+body {
+  font-family: 'Comfortaa', sans-serif;
+  background-color: #EEE8E8;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+:root{
+  --danger-color: #ED3B53;
+  --light-color: #348DCC;
+  --background-color: #EEE8E8;
+  --main-lighter-color: #283C8C;
+  --main-default-color: #10267F;
+  --success-color: #3A865E;
 }
