Informacion de guias impresas

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@ body {
 
 :root{
   --danger-color: #ED3B53;
-  --light-color: #348DCC;
+  --light-color: #338ccc;
   --background-color: #EEE8E8;
   --main-lighter-color: #283C8C;
   --main-default-color: #10267F;
