--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Exo+2:wght@300&display=swap');
 @import url(./normalize.css);
 /* ./src/index.css */
 @tailwind base;
